# factor-research

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  SPEC_AMENDMENTS.md  pyproject.toml
backend/ingestion/: cleaning.py  config.py  derived_metrics.py  ingest_cli.py  nflverse_source.py  pfr_parser.py  pfr_scraper.py
backend/models/: research_models.py
backend/research/: classify.py  cli.py  contract_export.py  contract_import.py  db.py  define.py  extract.py  harness.py  measure.py  metrics_catalog.py  models.py  report.py  statistical.py
backend/research/hypotheses/: conversion_efficiency_ats_mispricing.yaml  conversion_efficiency_lookback_comparison.yaml  defensive_efficiency_compound.yaml  defensive_underpricing.yaml  fourth_down_aggressiveness.yaml  pattern_matching_defense_effectiveness.yaml  penalty_rate_coaching_quality.yaml  red_zone_efficiency_divergence.yaml  sack_rate_differential.yaml  third_down_rate_meta_shift.yaml  turnover_margin_mean_reversion.yaml
tests/: test_db_models.py
tests/ingestion/: test_cleaning.py  test_derived_metrics.py
tests/research/: test_classify.py  test_contract_export.py  test_contract_import.py  test_define.py  test_extract.py  test_harness.py  test_measure.py  test_metrics_catalog.py  test_models.py  test_report.py  test_statistical.py
tests/research/fixtures/: invalid_hypothesis_missing_name.yaml  sample_hypothesis.yaml
