[project]
name = "factor-research"
version = "0.1.0"
description = "NFL factor research framework for systematic backtesting of game-outcome hypotheses"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas",
    "numpy",
    "openpyxl",
    "python-dotenv",
    "sqlalchemy",
    "alembic",
    "scipy",
    "statsmodels",
    "pyyaml",
    "click",
    "nflreadpy>=0.1.5",
    "pyarrow>=23.0.1",
]

[project.scripts]
factor-research = "backend.research.cli:main"
factor-ingest = "backend.ingestion.ingest_cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "ipykernel",
]
